# bluerov2-navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: thruster_allocator.yaml
docs/: 01_simulation_setup.md  02_thruster_allocator.md  03_6dof_pid.md  04_waypoint_tracking.md  05_voxel_astar.md  interview_qa.md
experiments/: README.md
launch/: thruster_allocator.launch.py
src/: thruster_allocator.cpp
